# PageFactoryPlaywright

./: Dockerfile  Makefile  Readme.md  docker-compose.yaml  pyproject.toml
pfp/: conftest.py  pyproject.toml  pytest.ini
pfp/components/: __init__.py
pfp/components/modals/: search_modal.py
pfp/components/navigation/: navbar.py  sidebar.py
pfp/elements/: __init__.py  button.py  component.py  input.py  link.py  list_item.py  title.py
pfp/pages/: __init__.py  docs_page.py  home_page.py
pfp/pages/base/: base_page_interface.py
pfp/tests/: test_docs.py  test_example_errors.py  test_search.py
scripts/: start_allure.sh
